<resources>
    <string name="app_name">BDD Robo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is mandatory</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="successful_login">Successful Login</string>
</resources>
